--- a/Report/project.bib
+++ b/Report/project.bib
@@ -116,6 +116,21 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{Kowalski/GGP,
+  author    = {Jakub Kowalski and
+               Marek Szykula},
+  title     = {Experimental Studies in General Game Playing: An Experience Report},
+  journal   = {CoRR},
+  volume    = {abs/2003.03410},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2003.03410},
+  archivePrefix = {arXiv},
+  eprint    = {2003.03410},
+  timestamp = {Tue, 10 Mar 2020 13:33:48 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2003-03410.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{Ben-David/DifferentDomains,
   author    = {Shai Ben{-}David and
                John Blitzer and
