--- a/Report/project.bib
+++ b/Report/project.bib
@@ -251,5 +251,26 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{Muggleton/Aleph,
+  author    = {Stephen Muggleton},
+  title     = {Inverse Entailment and Progol},
+  journal   = {New Generation Comput.},
+  volume    = {13},
+  number    = {3{\&}4},
+  pages     = {245--286},
+  year      = {1995},
+  url       = {https://doi.org/10.1007/BF03037227},
+  doi       = {10.1007/BF03037227},
+  timestamp = {Wed, 14 Nov 2018 10:24:10 +0100},
+  biburl    = {https://dblp.org/rec/journals/ngc/Muggleton95.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{McCreath/Meta-extraction,
+  author	= {Eric McCreath, Arun Sharma},
+  title		= {Extraction of meta-knowledge to restrict the hypothesis space for ILP systems},
+  booktitle	= {Proc. of the 8th Australian Joint Conf. on AI},
+  year	 	= {1995}
+}
 
 
