--- a/Report/00-abstract.tex
+++ b/Report/00-abstract.tex
@@ -1,30 +1,16 @@
 \begin{abstract}
 
-%\ac{GGP is ....}
-General Game Playing (GGP) is a framework in which an artificial intelligence program is required to play a variety of games successfully.
-The framework includes repositories of game descriptions written in a logic programming language.
-\ac{Need to better explain what GGP is. }
-\ac{Why is GGP interesting?}
+General Game Playing (GGP) is a framework in which an artificial intelligence program is required to play a variety of games successfully, it acts as a test bed for AI and motivator of research. The AI is given a random game description at runtime (such as checkers or tic tac toe) which it then plays.
+The framework includes repositories of these game descriptions written in a logic programming language.
 
-%\ac{IGGP is ....}
-\ac{The Inductive General Game Playing (IGGP) problem challenges ILP systems to learn these GGP game rules by watching the game being played.
-The above statement is precise. You could use a different ML approach (as we do in the IGGP paper).}
-In other words, IGGP is the problem of inducing general game rules from specific game observations.
-\ac{Why is IGGP interesting? Why is it challenging?}
 
-\ac{One promising approach to IGGP is inductive logic programming, a form of ML ....}
-\ac{talk very briefly about ILP used in IGGP}
+The Inductive General Game Playing (IGGP) problem challenges machine learning systems to learn these GGP game rules by watching the game being played.
+%\ac{The above statement is precise. You could use a different ML approach (as we do in the IGGP paper).}
+In other words, IGGP is the problem of inducing general game rules from specific game observations. Inductive Logic Programming (ILP), a subsection of ML has proved to be a promising approach to this problem though it has been shown that it is still a hard problem for ILP systems. In this regard IGGP motivates future research in ILP.
 
-% These game descriptions can be used separately as an interesting Inductive Logic Programming problem.
-% examples and provides a good test bed for existing ILP systems.
-
-%\ac{more, why is it interesting?}
-
-%\ac{However, a limitation of existing work is ....}
-Existing work on IGGP has always assumed that the game player being observed makes random moves. This is not representative of how a human learns to play a game, to learn to play chess we watch someone who is playing to win.
+Existing work on IGGP has always assumed that the game player being observed makes random moves. This is not representative of how a human learns to play a game, to learn to play chess we watch someone who is playing to win. 
 \ac{emphasise this limitation more, why is your work interesting? why should anyone care?}
 
-%\ac{To address this limitation we, .....}
 To address this limitation, in this paper we analyse the effect of using optimal verses random gameplay traces as well as the effect of varying the number of traces in the training set.
 
 We use Sancho, the 2014 GGP competition winner, to generate optimal game traces for a large number of games.
