--- a/Report/project.tex
+++ b/Report/project.tex
@@ -88,7 +88,22 @@ The identification of possible heuristics takes place in two stages. The first o
 \chapter{ILP systems used}
 We use three ILP systems to compare the effects of different learning data, Metagol, Aleph and ILASP. All three systems use different approaches the ILP problem.
 \section{Metagol}
+The Metagol ILP system is a meta-interpreter for Prolog, that is, it is written in the same language is evaluates. Metagol takes positive and negative examples, background knowledge and meta-rules. Meta rules are specific to Metagol. They determin the shape of the induced rules and are used to guide the search for a hypothesis. An example of a metarule is the \texttt{chain} rule \[P(A,B) \leftarrow Q(A,C),R(C,B)\] The letters P, Q and R represent existentially quantified second order variables, A, B and C are regular Prolog variables. When trying to induce rules the second order variables are substituted for predicates from the background knowledge or the hypothesis itself. To illustrate this consider a metarule being applied when learning the predicate \textit{last(a,b)} where a is a list and b is the last element in it. Given the positive example 
+\begin{minted}{Prolog}
+last([a,l,g,o,r,i,t,h,m],m).
+\end{minted}  
 
+As well as the background predicates \textit{reverse/2} and \textit{head/2} the chain rule might be used to derive the rule 
+\begin{minted}{Prolog}
+last(A,B) :- reverse(A,C), head(C,B)
+\end{minted}
+
+\cite{Andrew/ILP-review}
+\begin{enumerate}
+\item Select a positive example (an atom) to generalise. If none exists, stop, otherwise proceed to the next step.
+\item Try to prove an atom using background knowledge by delegating the proof to Prolog. If successful, stop, otherwise proceed to the next step.
+\item Try to unify the atom with the head of a metarule and bind the existentially quantified variables in a metarule to symbols in the predicate and constant signatures. Save the substitutions and try to prove the body of the metarule through meta-interpretation (by treating the body atoms as examples and applying step 2 to them).
+\end{enumerate}
 \section{ALEPH}
 Aleph is an Prolog variant of the ILP system Progol \cite{Muggleton/Aleph}. As input, like any other ILP system, Aleph takes positive and negative examples represented as a set of facts along with the background knowledge. It also requires \textit{mode declarations} and \textit{determinations} which are specific to Aleph. Mode declarations specify the type of the inputs and outputs of each predicate used e.g. \texttt{plus(+integer,+integer,-integer)} where \texttt{+} signifies an input and \texttt{-} an output.
 Determinations specify which predicates can go in the body of a hypothesis. These determinations take the form of pairs of predicates, the first being the head of the clause and the second a predicate that can appear in its body.
@@ -227,192 +242,43 @@ Training Data & Testing Data & Predicate & Metagol & Aleph \\ \hline
 \end{tabular}
 \end{center}
 \subsubsection{Random training and testing}
-metagol
-\\
-\begin{tabular}{lrrrr}
-\hline
- game               &   next &   goal &   legal &   terminal \\
-\hline
- alquerque          &     51 &     50 &      50 &        100 \\
- asylum             &     50 &     50 &      50 &        100 \\
- battle\_of\_numbers  &     54 &     50 &      50 &        100 \\
- breakthrough       &     50 &     50 &      50 &        100 \\
- buttons\_and\_lights &     50 &     50 &      50 &        100 \\
- duikoshi           &     50 &     50 &      50 &        100 \\
- eight\_puzzle       &     55 &     50 &      50 &        100 \\
- freeforall         &     54 &     50 &      50 &        100 \\
- hexforthree        &     51 &     50 &      50 &        100 \\
- horseshoe          &     57 &     50 &      50 &        100 \\
- hunter             &     52 &     50 &      50 &        100 \\
- knights\_tour       &     50 &     50 &      50 &        100 \\
- kono               &     52 &     50 &      50 &        100 \\
- pentago            &     51 &     50 &      50 &         50 \\
- pilgrimage         &     50 &     50 &      50 &        100 \\
- rainbow            &     50 &     50 &      50 &        100 \\
- sudoku             &     50 &     50 &      50 &         50 \\
- sukoshi            &     50 &     50 &      50 &        100 \\
- untwisty\_corridor  &     62 &     50 &      50 &        100 \\
-\hline
-\end{tabular}
-\\
-aleph
-\\
-\begin{tabular}{lrrrr}
-\hline
- game               &   next &   goal &   legal &   terminal \\
-\hline
- alquerque          &     56 &     95 &      50 &        100 \\
- asylum             &     52 &     99 &      50 &        100 \\
- battle\_of\_numbers  &     68 &     98 &      76 &        100 \\
- breakthrough       &     51 &     75 &      50 &        100 \\
- buttons\_and\_lights &    100 &     75 &      50 &        100 \\
- duikoshi           &     90 &     83 &      90 &        100 \\
- eight\_puzzle       &     96 &     99 &      84 &        100 \\
- freeforall         &     98 &     98 &      76 &        100 \\
- hexforthree        &     67 &     99 &      72 &        100 \\
- horseshoe          &     93 &     97 &      97 &        100 \\
- hunter             &     95 &     98 &      99 &        100 \\
- knights\_tour       &     98 &     99 &      99 &        100 \\
- kono               &     94 &     98 &      95 &        100 \\
- pentago            &     98 &     83 &      98 &        100 \\
- pilgrimage         &     97 &     98 &      83 &        100 \\
- rainbow            &     93 &     75 &      70 &        100 \\
- sudoku             &     95 &     75 &      50 &        100 \\
- sukoshi            &     87 &     75 &      90 &        100 \\
- untwisty\_corridor  &    100 &     75 &      50 &        100 \\
-\hline
-\end{tabular}
-\\
-specialised ilasp
-\\
-\begin{tabular}{lrrrr}
-\hline
- game               &   next &   goal &   legal &   terminal \\
-\hline
- alquerque          &     46 &     90 &      99 &        100 \\
- asylum             &     69 &     99 &      83 &        100 \\
- battle\_of\_numbers  &     54 &     97 &      88 &        100 \\
- breakthrough       &     56 &     50 &     100 &         50 \\
- buttons\_and\_lights &    100 &     50 &       0 &        100 \\
- duikoshi           &     85 &     66 &      60 &        100 \\
- eight\_puzzle       &     96 &     98 &      75 &        100 \\
- freeforall         &     76 &     71 &      85 &        100 \\
- hexforthree        &     83 &    100 &     100 &        100 \\
- horseshoe          &     93 &     95 &      96 &        100 \\
- hunter             &     71 &     99 &      83 &        100 \\
- knights\_tour       &     83 &     98 &      95 &        100 \\
- kono               &     83 &     97 &      98 &        100 \\
- pentago            &     99 &     42 &      83 &        100 \\
- pilgrimage         &     92 &     96 &      89 &         96 \\
- rainbow            &     87 &     50 &      27 &        100 \\
- sudoku             &     84 &     50 &      10 &        100 \\
- sukoshi            &   -100 &     50 &      81 &        100 \\
- untwisty\_corridor  &    100 &     50 &       0 &       -100 \\
-\hline
-\end{tabular}
-
-\subsection{Optimal res}
-\begin{tabular}{llrrr}
-\hline
- game               & predicate   &   metagol &   aleph &   specialised\_ilasp \\
-\hline
- alquerque          & next        &        51 &      90 &                  47 \\
- alquerque          & goal        &        50 &      95 &                  90 \\
- alquerque          & legal       &        50 &      50 &                  99 \\
- alquerque          & terminal    &       100 &     100 &                 100 \\
- asylum             & next        &        50 &      52 &                  49 \\
- asylum             & goal        &        50 &      99 &                  99 \\
- asylum             & legal       &        50 &      50 &                  99 \\
- asylum             & terminal    &       100 &     100 &                 100 \\
- battle\_of\_numbers  & next        &        53 &      65 &                  75 \\
- battle\_of\_numbers  & goal        &        50 &      98 &                  97 \\
- battle\_of\_numbers  & legal       &        50 &      76 &                  88 \\
- battle\_of\_numbers  & terminal    &       100 &     100 &                 100 \\
- breakthrough       & next        &        50 &      90 &                  90 \\
- breakthrough       & goal        &        50 &      75 &                  50 \\
- breakthrough       & legal       &        50 &      50 &                  87 \\
- breakthrough       & terminal    &       100 &     100 &                  65 \\
- buttons\_and\_lights & next        &        50 &     100 &                 100 \\
- buttons\_and\_lights & goal        &        50 &      75 &                  50 \\
- buttons\_and\_lights & legal       &        50 &      50 &                   0 \\
- buttons\_and\_lights & terminal    &       100 &     100 &                 100 \\
- duikoshi           & next        &        50 &      90 &                  87 \\
- duikoshi           & goal        &        50 &      83 &                  66 \\
- duikoshi           & legal       &        50 &      91 &                  69 \\
- duikoshi           & terminal    &       100 &     100 &                 100 \\
- eight\_puzzle       & next        &        55 &      96 &                  88 \\
- eight\_puzzle       & goal        &        50 &      99 &                  50 \\
- eight\_puzzle       & legal       &        50 &      84 &                  68 \\
- eight\_puzzle       & terminal    &       100 &     100 &                 100 \\
- freeforall         & next        &        55 &      98 &                  74 \\
- freeforall         & goal        &        50 &      98 &                  71 \\
- freeforall         & legal       &        50 &      76 &                  97 \\
- freeforall         & terminal    &       100 &     100 &                 100 \\
- hexforthree        & next        &        51 &      67 &                  83 \\
- hexforthree        & goal        &        50 &      99 &                 100 \\
- hexforthree        & legal       &        50 &      71 &                 100 \\
- hexforthree        & terminal    &       100 &     100 &                 100 \\
- horseshoe          & next        &        57 &      93 &                  93 \\
- horseshoe          & goal        &        50 &      97 &                  95 \\
- horseshoe          & legal       &        50 &      98 &                 100 \\
- horseshoe          & terminal    &       100 &     100 &                 100 \\
- hunter             & next        &        52 &      95 &                  74 \\
- hunter             & goal        &        50 &      98 &                  99 \\
- hunter             & legal       &        50 &      99 &                -100 \\
- hunter             & terminal    &       100 &     100 &                 100 \\
- knights\_tour       & next        &        50 &      93 &                  50 \\
- knights\_tour       & goal        &        50 &      99 &                  99 \\
- knights\_tour       & legal       &        50 &      99 &                  97 \\
- knights\_tour       & terminal    &       100 &     100 &                 100 \\
- kono               & next        &        52 &      94 &                  83 \\
- kono               & goal        &        50 &      98 &                  97 \\
- kono               & legal       &        50 &      99 &                  99 \\
- kono               & terminal    &       100 &     100 &                 100 \\
- pentago            & next        &        52 &      99 &                  99 \\
- pentago            & goal        &        50 &      83 &                  64 \\
- pentago            & legal       &        50 &      97 &                  91 \\
- pentago            & terminal    &        50 &     100 &                 100 \\
- pilgrimage         & next        &        50 &      97 &                  88 \\
- pilgrimage         & goal        &        50 &      98 &                  96 \\
- pilgrimage         & legal       &        50 &      84 &                  86 \\
- pilgrimage         & terminal    &       100 &     100 &                 100 \\
- rainbow            & next        &        50 &      93 &                  87 \\
- rainbow            & goal        &        50 &      75 &                  50 \\
- rainbow            & legal       &        50 &      70 &                  27 \\
- rainbow            & terminal    &       100 &     100 &                 100 \\
- sudoku             & next        &        50 &      95 &                  82 \\
- sudoku             & goal        &        50 &      75 &                  50 \\
- sudoku             & legal       &        50 &      95 &                  10 \\
- sudoku             & terminal    &        50 &     100 &                  99 \\
- sukoshi            & next        &        50 &      87 &                  75 \\
- sukoshi            & goal        &        50 &      75 &                  50 \\
- sukoshi            & legal       &        50 &      91 &                  83 \\
- sukoshi            & terminal    &       100 &     100 &                 100 \\
- untwisty\_corridor  & next        &        57 &     100 &                 100 \\
- untwisty\_corridor  & goal        &        50 &      75 &                  50 \\
- untwisty\_corridor  & legal       &        50 &      50 &                   0 \\
- untwisty\_corridor  & terminal    &       100 &     100 &                 100 \\
-\hline
-\end{tabular}
-
-		
+\subsubsection{Balanced Accuracy}
 \begin{tikzpicture}
 \begin{axis}[
-	x tick label style={
-		/pgf/number format/1000 sep=},
+	%xtick = data,
 	ylabel=Year,
 	enlargelimits=0.05,
 	legend style={at={(0.5,-0.1)},
-	anchor=north,legend columns=-1},
-	ybar interval=0.7,
+	anchor=north,
+	legend columns=-1},
+	ybar interval=0.5,
+	symbolic x coords={specialised ilasp,metagol,aleph, poog}
 ]
 \addplot 
-	coordinates {(2012,408184) (2011,408348)
-		 (2010,414870) (2009,412156)};
+	coordinates {(specialised ilasp,74) (metagol,60) (aleph,89) (poog, 80)};
 \addplot 
-	coordinates {(2012,388950) (2011,393007) 
-		(2010,398449) (2009,395972)};
-\legend{Men,Women}
+	coordinates {(specialised ilasp,78) (metagol,60) (aleph,89) (poog,80)};
+\legend{Random,Optimal}
+\end{axis}
+\end{tikzpicture}
+
+\subsubsection{Number of perfect games}
+\begin{tikzpicture}
+\begin{axis}[
+	%xtick = data,
+	ylabel=Year,
+	enlargelimits=0.05,
+	legend style={at={(0.5,-0.1)},
+	anchor=north,
+	legend columns=-1},
+	ybar interval=0.5,
+	symbolic x coords={specialised ilasp,metagol,aleph, poog}
+]
+\addplot 
+	coordinates {(specialised ilasp,36) (metagol,29) (aleph,42) (poog, 40)};
+\addplot 
+	coordinates {(specialised ilasp,42) (metagol,32) (aleph,43) (poog,40)};
+\legend{Random,Optimal}
 \end{axis}
 \end{tikzpicture}
 \section{Optimal Play vs Random with varying sample size}
